# simple_sm_workflow

./: .gitignore  README.md  meta.yaml  pyproject.toml
