[tool.poetry]
name = "test-cli-dk"
version = "0.2.1"
description = ""
authors = ["domenico-simone <dome.simone@gmail.com>"]
readme = "README.md"
packages = [{include = "test_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
snakemake = "^7.23"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/legacy/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello_dK = "test_cli.tools:hello_world"
hi_dK = "test_cli.tools:hi_everyone"
wf1 = "test_cli.main:run_snakemake_workflow"

[tool.poetry.dependencies]
samtools = "^1.11"
numpy = "^1.19.2"
picard = "^2.23.7"
bcftools = "^1.11"
trimmomatic = "^0.39"
biopython = "^1.78"
pip = "^20.2.3"
seqtk = "^1.3"
snakemake = "^5.26"
pyvcf = "^0.6.7"
gmap = "^2020.04.08"
yaml = "^0.2.5"
python = "^3.12"
scipy = "^1.5.2"
bamutil = "^1.0.14"
fastqc = "^0.11.9"
gatk-framework = { git = "https://github.com/chapmanb/gatk.git", branch = "master" }
# gatk-framework = "^3.6"
pandas = "^1.1.3"
mtoolnote = "^0.2.0"